kubernetes/apigateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: registry.gitlab.com/fizzerle/dse-2019-ss/apigateway:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 8080
      imagePullSecrets:
        - name: registry.gitlab.com
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: api-gateway
  type: NodePort
