kubernetes/backendui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backendui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backendui
  template:
    metadata:
      labels:
        app: backendui
    spec:
      containers:
        - name: backendui
          image: registry.gitlab.com/fizzerle/dse-2019-ss/backendui:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 8080
      imagePullSecrets:
        - name: registry.gitlab.com
---
apiVersion: v1
kind: Service
metadata:
  name: backendui-service
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: backendui
