kubernetes/entitystorageservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: entity-storage
  labels:
    app: entity-storage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: entity-storage
  template:
    metadata:
      labels:
        app: entity-storage
    spec:
      containers:
        - name: entity-storage
          image: registry.gitlab.com/fizzerle/dse-2019-ss/entitystorageservice:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 8080
      imagePullSecrets:
        - name: registry.gitlab.com
---
apiVersion: v1
kind: Service
metadata:
  name: entity-storage
  labels:
    app: entity-storage
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: entity-storage
