kubernetes/eventstorageservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-storage
  labels:
    app: event-storage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-storage
  template:
    metadata:
      labels:
        app: event-storage
    spec:
      containers:
        - name: event-storage
          image: e1426972/eventstorageservice:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: event-storage
  labels:
    app: event-storage
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: event-storage
