kubernetes/notificationstorageservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-storage
  labels:
    app: notification-storage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-storage
  template:
    metadata:
      labels:
        app: notification-storage
    spec:
      containers:
        - name: notification-storage
          image: e1426972/notificationstorageservice:0.0.6-SNAPSHOT
          imagePullPolicy: Always
          ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: notification-storage
  labels:
    app: notification-storage
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: notification-storage
